Bug 69573 - Incorrect format-string %#x
Summary: Incorrect format-string %#x
Status: CLOSED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/Acceleration/glamor (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Zhigang Gong
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-19 12:42 UTC by martin.koegler
Modified: 2013-11-06 14:46 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description martin.koegler 2013-09-19 12:42:48 UTC
Line 215 of https://bugs.freedesktop.org/show_bug.cgi?id=65964:
		FatalError("destination is framebuffer incomplete: %s [%#x]\n",
			   str, status);
Comment 1 martin.koegler 2013-09-19 12:43:44 UTC
Sorry, wrong link. It should have been:
Line 215 of http://cgit.freedesktop.org/xorg/driver/glamor/tree/src/glamor_fbo.c
Comment 2 Clemens Fruhwirth 2013-11-01 09:17:38 UTC
This leads to:

Fatal server error:
[430338.463] (EE) (EE) BUG: triggered 'if (f[f_idx])'
[430338.463] (EE) BUG: log.c:464 in pnprintf()
[430338.463] (EE) Unsupported printf directive '#'
[430338.463] (EE) 
[430338.463] (EE) Backtrace:
[430338.463] (EE) 0: /usr/bin/X (xorg_backtrace+0x3d) [0x57f67d]
[430338.463] (EE) 1: /usr/bin/X (LogVMessageVerbSigSafe+0x87d) [0x58aefd]
[430338.463] (EE) 2: /usr/bin/X (FatalError+0xd5) [0x58b1c5]
[430338.463] (EE) 3: /usr/lib/libglamor.so.0 (0x7f65e8861000+0x25edf) [0x7f65e8886edf]
[430338.463] (EE) 4: /usr/lib/libglamor.so.0 (0x7f65e8861000+0x2603e) [0x7f65e888703e]
[430338.463] (EE) 5: /usr/lib/libglamor.so.0 (glamor_create_pixmap+0x298) [0x7f65e88653f8]
[430338.463] (EE) 6: /usr/lib/xorg/modules/drivers/radeon_drv.so (0x7f65e5d33000+0x4bc23) [0x7f65e5d7ec23]
[430338.463] (EE) 7: /usr/bin/X (0x400000+0x33317) [0x433317]
[430338.463] (EE) 8: /usr/bin/X (0x400000+0x373be) [0x4373be]
[430338.463] (EE) 9: /usr/bin/X (0x400000+0x2693a) [0x42693a]
[430338.463] (EE) 10: /usr/lib/libc.so.6 (__libc_start_main+0xf5) [0x7f65ea213bc5]
[430338.463] (EE) 11: /usr/bin/X (0x400000+0x26c81) [0x426c81]
[430338.463] (EE) 
[430338.463] destination is framebuffer incomplete: unknown error [%#x]
[430338.463] (EE) 
[430338.463] (EE) 
Please consult the The X.Org Foundation support 
         at http://wiki.x.org
Comment 3 Zhigang Gong 2013-11-01 16:07:43 UTC
Could you tell more detail about how to trigger the following bug?
Actually, this means there is another bug besides this unsupported printf directive. May be you can file a new bug for that.

(In reply to comment #2)
> This leads to:
> 
> Fatal server error:
> [430338.463] (EE) (EE) BUG: triggered 'if (f[f_idx])'
> [430338.463] (EE) BUG: log.c:464 in pnprintf()
> [430338.463] (EE) Unsupported printf directive '#'
> [430338.463] (EE) 
> [430338.463] (EE) Backtrace:
> [430338.463] (EE) 0: /usr/bin/X (xorg_backtrace+0x3d) [0x57f67d]
> [430338.463] (EE) 1: /usr/bin/X (LogVMessageVerbSigSafe+0x87d) [0x58aefd]
> [430338.463] (EE) 2: /usr/bin/X (FatalError+0xd5) [0x58b1c5]
> [430338.463] (EE) 3: /usr/lib/libglamor.so.0 (0x7f65e8861000+0x25edf)
> [0x7f65e8886edf]
> [430338.463] (EE) 4: /usr/lib/libglamor.so.0 (0x7f65e8861000+0x2603e)
> [0x7f65e888703e]
> [430338.463] (EE) 5: /usr/lib/libglamor.so.0 (glamor_create_pixmap+0x298)
> [0x7f65e88653f8]
> [430338.463] (EE) 6: /usr/lib/xorg/modules/drivers/radeon_drv.so
> (0x7f65e5d33000+0x4bc23) [0x7f65e5d7ec23]
> [430338.463] (EE) 7: /usr/bin/X (0x400000+0x33317) [0x433317]
> [430338.463] (EE) 8: /usr/bin/X (0x400000+0x373be) [0x4373be]
> [430338.463] (EE) 9: /usr/bin/X (0x400000+0x2693a) [0x42693a]
> [430338.463] (EE) 10: /usr/lib/libc.so.6 (__libc_start_main+0xf5)
> [0x7f65ea213bc5]
> [430338.463] (EE) 11: /usr/bin/X (0x400000+0x26c81) [0x426c81]
> [430338.463] (EE) 
> [430338.463] destination is framebuffer incomplete: unknown error [%#x]
> [430338.463] (EE) 
> [430338.463] (EE) 
> Please consult the The X.Org Foundation support 
>          at http://wiki.x.org
Comment 4 Clemens Fruhwirth 2013-11-02 12:55:11 UTC
Yes, there is another bug. Either my X server crashes with this backtrace or with this https://bugs.freedesktop.org/show_bug.cgi?id=71161 backtrace. I am not sure if they are related.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.